--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>webapp</title>
-    <style type="text/css">
-    	*{
-    		margin: 0;
-    		padding: 0;
-    	}
-    		a {
-		text-decoration: none;
-	}
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <!--设置字符编码-->
+        <meta charset="UTF-8">
+        <!--手机开发屏幕自适应-->
+        <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <!--设置标题-->
+        <title>The Palest Ink</title>
+        <!--引入ico-->
+        <link rel="shortcut icon" href="static/favicon.ico?v=2">
+    </head>
+    <body>
+        <div id="app"></div>
+    </body>
 </html>
